# claw-code-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/api/: client.cpp  client.hpp  types.hpp
src/cli/: main.cpp
src/runtime/: session.cpp  session.hpp
src/tools/: bash_tool.cpp  bash_tool.hpp  file_read_tool.cpp  file_read_tool.hpp  file_write_tool.cpp  file_write_tool.hpp  itool.hpp  tool_registry.hpp
